# sandra-benes

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  404.html  Makefile  README.md  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  replit.md  routes.py  search.html  server.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-docker-image.yml  publish-gh-pages.yml  publish.yml  run-tests.yml
api/helpers/: index.html
data/: config.json  readme.txt  sample_data.csv
data/raw/hives/: 2012-alice.md  2012-amber.md  2012-buster.md  2012-garton.md  2012-harry.md  2012-kentucky.md  2012-marigold.md  2012-wild.md  2012-wilma.md  2013-eleanor.md  2013-jill.md  2013-lily.md  2014-alison.md  2014-clare.md  2014-dominique.md  2014-fran.md  2014-nicky.md  2014-nina.md  2014-ulrika.md  2015-bella.md  2015-camilla.md  2015-marit.md  2015-sally.md  (+47 more)
docs/: etl.md  getting_started.md  index.md
docs/api/: helpers.md
etl/: index.html
getting_started/: index.html
notebooks/: check_elastic.ipynb  dummy.ipynb  polars_to_parquet.ipynb  simple_polars.parquet  test.py
search/: search_index.json
src/sandra_benes/: __init__.py  app.py  config.py  fastapi.py  fastmcp.py
static/css/: style.css
static/js/: app.js
templates/: base.html  edit_file.html  index.html  view_file.html
tests/: test_fastapi.py  test_fastmcp.py
tests/contracts/: __init__.py  test_silver.py
tests/handlers/: __init__.py  test_pong.py
tests/helpers/: test_file_finder_service.py  test_file_iterator.py
tests/readers/: __init__.py
(+15 files in other folders)
