[project]
name = "sandra_benes"
version = "0.0.1"
description = "Pilot of the swing-wing rocket-plane Thunderbird 1."
authors = [ { name = "Joe J Collins", email = "joejcollins@gmail.com" },]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.13"
dependencies = [
    "debugpy",
    "gunicorn",
    "fastapi",
    "fastmcp",
    "ipykernel",
    "ipympl",
    "loguru",
    "mcp[cli]",
    "mkdocs",
    "pre-commit",
    "prometheus-client",
    "pytest-cov",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "ruff",
    "sourcery",
    "tqdm",
    "types-tqdm",
    "uvicorn",
    ]

[project.urls]
repository = "https://github.com/joejcollins/sandra-benes"

[tool.pytest.ini_options]
log_cli = false
addopts = "-q --disable-warnings --cache-clear"
testpaths = ["./tests"]

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I", "PL", "D"]
lint.ignore = ["D203", "D213"]
lint.fixable = ["ALL"]
line-length = 80

[tool.uv]
package = true

[[tool.mypy.overrides]]
module = ["sandra_benes.*"]
follow_untyped_imports = true

[tool.pyright]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Linux"
